fix: added overflow: hidden and text-overflow for text components in layout

--- a/src/components/ProfileData/ProfileData.scss
+++ b/src/components/ProfileData/ProfileData.scss
@@ -19,6 +19,8 @@
 			font-weight: 400;
 			line-height: 23px;
 			margin: 10px 0 0;
+			overflow: hidden;
+            text-overflow: ellipsis;
 		}
 	}
 }
