--- a/src/components/ProjectView/ProjectView.scss
+++ b/src/components/ProjectView/ProjectView.scss
@@ -12,6 +12,7 @@
 	&__container-crumbs {
 		display: flex;
 		justify-content: space-between;
+		overflow: hidden;
 	}
 
 	&__container-icons {
@@ -60,6 +61,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
+		overflow: hidden;
 	}
 
 	&__title {
@@ -70,6 +72,8 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: 1;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	&__list-place {
@@ -194,6 +198,8 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: 1.6;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	@media screen and (max-width: 1919px) {
